--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
       <h1>Hello, Pluralsight!</h1>
+      <ul>
+        <li>Java</li>
+        <li>Spring</li>
+        <li>React</li>
+      </ul>
 
   </body>
 </html>
